--- a/index.html
+++ b/index.html
@@ -42,6 +42,32 @@
                 <img src="assets/hamburger-menu.png" alt="">
             </div>
         </nav> <!--  nav section end here -->
+
+        <!-- its my hero/banner section....  -->
+        <section id="hero-section">
+            <div class="hero-banner">
+
+                <div class="hero-img">
+                    <p>NEW</p>
+                    <img class="hero-circle" src="assets/hero-circle.png" alt="">
+                    <img class="hero-microphone" src="assets/microphone.png" alt="">
+
+
+                </div>
+                <div class="hero-text">
+                    <h1>TechWave</h1>
+                    <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+
+                </div>
+
+                <div class="hero-btn">
+                    <button class="nav-btn"><img src="assets/spotify.png" alt=""><a href="">Listen On
+                            Spotify</a></button>
+                    <button class="nav-btn subs-btn"><img src="assets/message.png" alt=""><a
+                            href="">Subscribe</a></button>
+                </div>
+            </div>
+        </section>
     </header>
 </body>
 
