--- a/index.html
+++ b/index.html
@@ -69,6 +69,45 @@
             </div>
         </section>
     </header>
+
+    <!-- It is main section of the body  -->
+    <main>
+        <section id="main-section-one">
+            <div class="main-about">
+                <h2>About The Podcast</h2>
+                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+                    We break down complex topics into digestible insights, explore productivity strategies that actually
+                    work,
+                    and share stories of personal growth from industry leaders. <br><br><br>
+                    <span class="about-text">Join thousands of young professionals and tech enthusiasts who start their
+                        day with TechWave.</span>
+                </p>
+            </div>
+
+            <div class="hr-line"></div>
+
+            <div class="rating-card">
+                <div class="card">
+                    <h1>150K+</h1>
+                    <p>MONTHLY LISTENERS</p>
+                </div>
+                <div class="card">
+                    <h1>200+</h1>
+                    <p>EPISODES PUBLISHED</p>
+                </div>
+                <div class="card">
+                    <h1 class="card-img">4.9  <img src="assets/greenstar.png" alt=""></h1>
+                    <p>AVERAGE RATING</p>
+                </div>
+                <div class="card">
+                    <h1>50+</h1>
+                    <p>INDUSTRY EXPERTS</p>
+                </div>
+            </div>
+
+
+        </section>
+    </main>
 </body>
 
 </html>
