--- a/index.html
+++ b/index.html
@@ -107,6 +107,40 @@
 
 
         </section>
+
+        <section id="main-section-two">
+             <h1>Why Choose TechWave</h1>
+             
+             <!-- it is my card box of section two  -->
+              <div class="choosetechwave-card">
+                <div class="choose-card chosse-1">
+                    <img src="assets/headphone.png" alt="headphone icon">
+                    <h4>Premium Audio Quality</h4>
+                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.   </p>
+                </div>
+                <div class="choose-card chosse-2">
+                    <img src="assets/device.png" alt="device icon">
+                    <h4>Mobile Friendly</h4>
+                    <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+
+                </div>
+                <div class="choose-card chosse-2">
+                    <img src="assets/location.png" alt="location icon">
+                    <h4>Global Community</h4>
+                    <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                </div>
+                <div class="choose-card chosse-2">
+                    <img src="assets/exclusiveicon.png" alt="">
+                    <h4>Exclusive Interviews</h4>
+                    <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+                </div>
+                <div class="choose-card">
+                    <img src="assets/resource.png" alt="resource icon">
+                    <h4>Rich Resources</h4>
+                    <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+                </div>
+              </div>
+        </section>
     </main>
 </body>
 
