have completed video card section for both desktop and mobile screen

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 
     <!-- It is main section of the body  -->
     <main>
+
+        <!-- it is the first section of the main body  -->
         <section id="main-section-one">
             <div class="main-about">
                 <h2>About The Podcast</h2>
@@ -96,7 +98,7 @@
                     <p>EPISODES PUBLISHED</p>
                 </div>
                 <div class="card">
-                    <h1 class="card-img">4.9  <img src="assets/greenstar.png" alt=""></h1>
+                    <h1 class="card-img">4.9 <img src="assets/greenstar.png" alt=""></h1>
                     <p>AVERAGE RATING</p>
                 </div>
                 <div class="card">
@@ -107,16 +109,19 @@
 
 
         </section>
-
+        <!-- it is the second section of the body  -->
         <section id="main-section-two">
-             <h1>Why Choose TechWave</h1>
-             
-             <!-- it is my card box of section two  -->
-              <div class="choosetechwave-card">
+            <h1>Why Choose TechWave</h1>
+
+            <!-- it is my card box of section two  -->
+            <div class="choosetechwave-card">
+
                 <div class="choose-card chosse-1">
                     <img src="assets/headphone.png" alt="headphone icon">
                     <h4>Premium Audio Quality</h4>
-                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.   </p>
+                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                        engineering. Every episode is mastered for optimal listening across all devices and platforms.
+                    </p>
                 </div>
                 <div class="choose-card chosse-2">
                     <img src="assets/device.png" alt="device icon">
@@ -132,14 +137,55 @@
                 <div class="choose-card chosse-2">
                     <img src="assets/exclusiveicon.png" alt="">
                     <h4>Exclusive Interviews</h4>
-                    <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+                    <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host
+                        secures exclusive conversations you won't find anywhere else, diving deep into their journeys,
+                        failures, and success strategies.</p>
                 </div>
                 <div class="choose-card">
                     <img src="assets/resource.png" alt="resource icon">
                     <h4>Rich Resources</h4>
                     <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
                 </div>
-              </div>
+            </div>
+        </section>
+
+        <section id="main-section-three">
+            <h1>Featured Episode</h1>
+            <div class="video-card">
+
+                <div class="video-card-All">
+                    <iframe src="https://www.youtube.com/embed/RDIlU7VLXu0?si=TZHrnRRLpzy6R2FA"
+                        title="YouTube video player" frameborder="0" referrerpolicy="strict-origin-when-cross-origin"
+                        allowfullscreen></iframe>
+                    <h2>The End of Software Engineers</h2>
+                    <p>In 2019, software development was crowned the #1 job in America, with a projected 22% growth by
+                        2029.
+
+                        By 2025, however, the landscape has shifted.</p>
+                    <h5><img src="assets/clock.png" alt="">13 min</h5>
+                </div>
+
+                <div class="video-card-All">
+                    <iframe src="https://www.youtube.com/embed/PLBYYdg0sfs?si=K0nXqu9aDUo9whHF"
+                        title="YouTube video player" frameborder="0" referrerpolicy="strict-origin-when-cross-origin"
+                        allowfullscreen></iframe>
+                    <h2>Top 10 Work from Home Productivity Tips</h2>
+                    <p>I'm hoping this video helps you, and if you're in need of some more help, I made my books,</p>
+                    <h5><img src="assets/clock.png" alt="">18 min</h5>
+                </div>
+
+                <div class="video-card-All">
+                    <iframe src="https://www.youtube.com/embed/IZ_W8NufP1Y?si=oOyWdQGSoi27JmDM"
+                        title="YouTube video player" frameborder="0" referrerpolicy="strict-origin-when-cross-origin"
+                        allowfullscreen></iframe>
+                    <h2>The Top Tech Jobs in 2026 </h2>
+                    <p>Hi Coders, avoid the noise & talk to yourself
+                        Decide your Goal & then make a plan towards it.
+                        Only "Discipline & efforts in right direction" will help us succeed.
+                    </p>
+                    <h5><img src="assets/clock.png" alt="">15 min</h5>
+                </div>
+            </div>
         </section>
     </main>
 </body>
