--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
         <section id=" main-section-one">
         <div class="main-about">
             <h2>About The Podcast</h2>
-            <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
-                We break down complex topics into digestible insights, explore productivity strategies that actually
-                work,
+            <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. We break down complex topics into digestible insights, explore productivity strategies that actually work, 
                 and share stories of personal growth from industry leaders. <br><br><br>
                 <span class="about-text">Join thousands of young professionals and tech enthusiasts who start their
                     day with TechWave.</span>
